--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="default" />
     <meta name="theme-color" content="#F2F2F7" />
-    <title>Tee Rotation</title>
+    <title>Royal-Tee</title>
   </head>
   <body>
     <div id="root"></div>
