--- a/index.html
+++ b/index.html
@@ -33,17 +33,10 @@
       }
     </style>
 
-    <!-- Libre Fonts (alle SIL OFL 1.1) -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <!--
-      Inter          – SIL OFL 1.1  – rsms.me/inter
-      Noto Sans      – SIL OFL 1.1  – google/fonts
-      Source Sans 3  – SIL OFL 1.1  – adobe/source-sans
-      Cormorant Garamond – SIL OFL 1.1
-      Playfair Display   – SIL OFL 1.1
-    -->
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&family=Noto+Sans:wght@400;500;600&family=Source+Sans+3:wght@400;600&family=Cormorant+Garamond:wght@400;500;600;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
+    <!-- Native System Fonts - no external font loading needed! -->
+    <!-- iOS/macOS: SF Pro + New York (Apple's system fonts) -->
+    <!-- Android: Roboto -->
+    <!-- Windows: Segoe UI -->
 
     <meta name="description" content="Dein persönlicher Tee-Begleiter mit intelligentem Rotations-System." />
     <title>Royal-Tea</title>
