--- a/index.html
+++ b/index.html
@@ -5,25 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
 
     <!-- PWA Manifest -->
-    <link rel="manifest" href="/manifest.json" />
+    <link rel="manifest" href="/manifest.json?v=1.0.0" />
 
     <!-- iOS PWA -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="Royal-Tea" />
 
-    <!-- Apple Touch Icons (alle Größen) -->
-    <link rel="apple-touch-icon" href="/icons/icon-180x180.png" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/icons/icon-180x180.png" />
-    <link rel="apple-touch-icon" sizes="167x167" href="/icons/icon-167x167.png" />
-    <link rel="apple-touch-icon" sizes="152x152" href="/icons/icon-152x152.png" />
-    <link rel="apple-touch-icon" sizes="120x120" href="/icons/icon-120x120.png" />
-    <link rel="apple-touch-icon" sizes="87x87"   href="/icons/icon-87x87.png" />
-    <link rel="apple-touch-icon" sizes="60x60"   href="/icons/icon-60x60.png" />
+    <!-- Apple Touch Icons (mit Cache-Bust für v1.0.0) -->
+    <link rel="apple-touch-icon" href="/icons/icon-180x180.png?v=1.0.0" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/icons/icon-180x180.png?v=1.0.0" />
+    <link rel="apple-touch-icon" sizes="167x167" href="/icons/icon-167x167.png?v=1.0.0" />
+    <link rel="apple-touch-icon" sizes="152x152" href="/icons/icon-152x152.png?v=1.0.0" />
+    <link rel="apple-touch-icon" sizes="120x120" href="/icons/icon-120x120.png?v=1.0.0" />
+    <link rel="apple-touch-icon" sizes="87x87"   href="/icons/icon-87x87.png?v=1.0.0" />
+    <link rel="apple-touch-icon" sizes="60x60"   href="/icons/icon-60x60.png?v=1.0.0" />
 
     <!-- Theme & Favicon -->
     <meta name="theme-color" content="#1d2646" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="/favicon.png?v=1.0.0" />
 
     <!-- Logo fix: avoid clipping on small screens (iPhone mini etc.) -->
     <style>
@@ -33,13 +33,8 @@
       }
     </style>
 
-    <!-- Native System Fonts - no external font loading needed! -->
-    <!-- iOS/macOS: SF Pro + New York (Apple's system fonts) -->
-    <!-- Android: Roboto -->
-    <!-- Windows: Segoe UI -->
-
     <meta name="description" content="Dein persönlicher Tee-Begleiter mit intelligentem Rotations-System." />
-    <meta name="app-version" content="0.13.0-r012.4">
+    <meta name="app-version" content="1.0.0">
     <title>Royal-Tea</title>
   </head>
   <body>
@@ -53,9 +48,9 @@
             registrations.forEach(reg => reg.unregister());
           }).then(() => {
             // Register fresh
-            return navigator.serviceWorker.register('/sw.js?v=20250220-1200');
+            return navigator.serviceWorker.register('/sw.js?v=1.0.0');
           }).then(() => {
-            console.log('✅ Royal-Tea SW registered - v0.13.0-r012.4');
+            console.log('✅ Royal-Tea SW registered - v1.0.0');
           }).catch(err => console.warn('SW:', err));
         });
       }
