--- a/index.html
+++ b/index.html
@@ -5,33 +5,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover" />
 
     <!-- PWA Manifest -->
-    <link rel="manifest" href="/manifest.json?v=1.0.0" />
+    <link rel="manifest" href="/manifest.json" />
 
     <!-- iOS PWA -->
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta name="apple-mobile-web-app-title" content="Royal-Tea" />
 
-    <!-- Apple Touch Icons (mit Cache-Bust für v1.0.0) -->
-    <link rel="apple-touch-icon" href="/icons/icon-180x180.png?v=1.0.0" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/icons/icon-180x180.png?v=1.0.0" />
-    <link rel="apple-touch-icon" sizes="167x167" href="/icons/icon-167x167.png?v=1.0.0" />
-    <link rel="apple-touch-icon" sizes="152x152" href="/icons/icon-152x152.png?v=1.0.0" />
-    <link rel="apple-touch-icon" sizes="120x120" href="/icons/icon-120x120.png?v=1.0.0" />
-    <link rel="apple-touch-icon" sizes="87x87"   href="/icons/icon-87x87.png?v=1.0.0" />
-    <link rel="apple-touch-icon" sizes="60x60"   href="/icons/icon-60x60.png?v=1.0.0" />
+    <!-- Apple Touch Icons - NEUE NAMEN für Cache-Bypass -->
+    <link rel="apple-touch-icon" href="/icons/crown-180.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/icons/crown-180.png" />
+    <link rel="apple-touch-icon" sizes="167x167" href="/icons/crown-167.png" />
+    <link rel="apple-touch-icon" sizes="152x152" href="/icons/crown-152.png" />
+    <link rel="apple-touch-icon" sizes="120x120" href="/icons/crown-120.png" />
+    <link rel="apple-touch-icon" sizes="87x87"   href="/icons/crown-87.png" />
+    <link rel="apple-touch-icon" sizes="60x60"   href="/icons/crown-60.png" />
 
     <!-- Theme & Favicon -->
     <meta name="theme-color" content="#1d2646" />
-    <link rel="icon" type="image/png" href="/favicon.png?v=1.0.0" />
-
-    <!-- Logo fix: avoid clipping on small screens (iPhone mini etc.) -->
-    <style>
-      /* Gibt dem Header genug vertikalen Raum auf sehr kleinen Geräten */
-      @media (max-height: 668px) {
-        header { padding-top: env(safe-area-inset-top, 2px); }
-      }
-    </style>
+    <link rel="icon" type="image/png" href="/favicon.png" />
 
     <meta name="description" content="Dein persönlicher Tee-Begleiter mit intelligentem Rotations-System." />
     <meta name="app-version" content="1.0.0">
@@ -43,11 +35,9 @@
     <script>
       if ('serviceWorker' in navigator) {
         window.addEventListener('load', () => {
-          // Unregister ALL old service workers first
           navigator.serviceWorker.getRegistrations().then(registrations => {
             registrations.forEach(reg => reg.unregister());
           }).then(() => {
-            // Register fresh
             return navigator.serviceWorker.register('/sw.js?v=1.0.0');
           }).then(() => {
             console.log('✅ Royal-Tea SW registered - v1.0.0');
